# NeptuneOD

./: .gitignore  README.md  environment.yml  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml
conf/collection/: atanas_triton_generated_extended.yaml
conf/collections/: atanas_triton_generated.yaml  atanas_triton_generated_extended.yaml  simulated_only.yaml  triton_nsdb_generated.yaml  voyager_collection.yaml
conf/dataset_instructions/: atanas_triton.yaml  triton_nsdb.yaml
conf/datasets/: jacobson1991_table_1_manual.yaml  jacobson1991_table_3_manual.yaml  simulated_example.yaml  voyager.yaml
conf/experiments/: atanas2026_simulated.yaml  atanas_triton_state.yaml  generate_collection_excel.yaml  generate_prefit_residuals.yaml  voyager_prefits.yaml
conf/figures/: dependent_variable.yaml  dependent_variable_differenced.yaml  residual_histogram.yaml  residual_scatter.yaml  residuals.yaml  residuals_psd.yaml
configurations/: Atanas2026.yaml
data/manual/: jacobson1991.csv  jacobson1991_ancillary.csv
scripts/: Atanas2026.py  aim-server.service  aim_backfill.py  generate_collection.py  generate_collection_excel.py  generate_prefit_residuals.py  generate_trajectory.py  setup_aim_server.sh  solve_least_squares.py  voyager_prefit_residuals.py
src/orbitdet/: transformations.py  utility.py
src/orbitdet/data/: __init__.py  nsdb.py  (+2 more)
test/: test_KernelManager.py  test_aim.py  test_nsdb_helpers.py  test_nsdb_parse.py  test_observation_factory.py  test_reproducibility_hydra.py  test_reproducibility_runtime.py  test_simulation.py
(+32 files in other folders)
